crates/plotnik-tests/tests/03-analyze/alternations/mixed_unlabeled_first.txt
Q = [
  (a)
  B: (b)
]
------------------ DIAGNOSTICS -------------------
error: an alternation cannot mix labeled and unlabeled alternatives
 --> query.ptk:2:3
  |
2 |   (a)
  |   ^^^
3 |   B: (b)
  |   - labeled alternative here
  |
help: either label every alternative or remove all labels
------------------ DEFINITIONS -------------------
